--- a/week11/Docs/SoNguyenMoi.ipynb
+++ b/week11/Docs/SoNguyenMoi.ipynb
@@ -6,7 +6,7 @@
       "name": "SoNguyenMoi.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO1XxEvUg4klR9iC2zD5voq",
+      "authorship_tag": "ABX9TyMJlgS6VyS6o5o8jn1DlwIZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,6 +41,8 @@
         "<b>Dữ liệu:</b> Vào từ thiết bị nhập chuẩn gồm một dòng chứa số nguyên n có không quá 100 chữ số và không chứa các số 0 không có nghĩa.\n",
         "\n",
         "<b>Kết quả:</b> Đưa ra thiết bị xuất chuẩn số nguyên m tìm được.\n",
+        "\n",
+        "<img src=\"images/So_nguyen_moi.JPG\">\n",
         "\n",
         "<h2>1. Abstraction</h2>\n",
         "Tìm một số lớn nhất chia hết cho 3 mà có duy nhất một chữ số khác với số cho trước\n",
